book/tests/snapshots/snapshot__run_reference_prql@language-features__dates-and-times-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/dates-and-times-0.prql
---
SELECT
  *,
  DATE '2022-12-31' - dob AS age_at_year_end
FROM
  employees
