book/tests/snapshots/snapshot__run_reference_prql@language-features__dates-and-times-2.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/dates-and-times-2.prql
---
SELECT
  *,
  TIMESTAMP '2020-01-01T13:19:55-0800' AS first_prql_commit
FROM
  commits
