book/tests/snapshots/snapshot__run_reference_prql@language-features__dates_and_times-3.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/dates_and_times-3.prql
---
SELECT
  *,
  start + INTERVAL 10 DAY AS first_check_in
FROM
  projects
