book/tests/snapshots/snapshot__run_reference_prql@language-features__distinct-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/distinct-0.prql
---
SELECT
  DISTINCT department
FROM
  employees
