book/tests/snapshots/snapshot__run_reference_prql@language-features__f-strings-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/f-strings-0.prql
---
SELECT
  CONCAT(first_name, ' ', last_name) AS full_name
FROM
  employees
