book/tests/snapshots/snapshot__run_reference_prql@language-features__ranges-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/ranges-0.prql
---
SELECT
  *
FROM
  events
WHERE
  date BETWEEN DATE '1776-07-04'
  AND DATE '1787-09-17'
  AND magnitude BETWEEN 50
  AND 100
