book/tests/snapshots/snapshot__run_reference_prql@language-features__ranges-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/ranges-1.prql
---
SELECT
  *
FROM
  orders
ORDER BY
  value DESC,
  date
LIMIT
  10 OFFSET 100
