book/tests/snapshots/snapshot__run_reference_prql@language-features__s-strings-3.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/s-strings-3.prql
---
WITH table_2 AS (
  SELECT
    DISTINCT ON first_name,
    id,
    age
  FROM
    employees
  ORDER BY
    age ASC
),
table_3 AS (
  SELECT
    *
  FROM
    salaries
)
SELECT
  table_0.*,
  table_1.*
FROM
  table_2 AS table_0
  JOIN table_3 AS table_1 ON table_0.* = table_1.*
