book/tests/snapshots/snapshot__run_reference_prql@language-features__s-strings-6.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/s-strings-6.prql
---
SELECT
  *,
  salary + benefits AS gross_salary,
  365 / (salary + benefits) AS daily_rate
FROM
  employees
